force-app/main/default/objects/OrderPdfSetting__mdt/OrderPdfSetting__mdt.object-meta.xml
<CustomObject>
    <label>Order PDF Setting</label>
    <pluralLabel>Order PDF Settings</pluralLabel>
</CustomObject>