force-app/main/default/objects/OrderPdfSetting__mdt/fields/CustomerNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerNumber__c</fullName>
    <label>Customer number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>