force-app/main/default/objects/OrderPdfSetting__mdt/fields/CustomerVATNumber__c.field-meta.xml
<CustomField>
    <fullName>CustomerVATNumber__c</fullName>
    <label>Customer VAT Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>