force-app/main/default/objects/OrderPdfSetting__mdt/fields/DebtorNr__c.field-meta.xml
<CustomField>
    <fullName>DebtorNr__c</fullName>
    <label>Debtor nr</label>
    <length>255</length>
    <type>Text</type>
</CustomField>