force-app/main/default/objects/OrderPdfSetting__mdt/fields/Footer__c.field-meta.xml
<CustomField>
    <fullName>Footer__c</fullName>
    <label>Footer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>