force-app/main/default/objects/OrderPdfSetting__mdt/fields/from__c.field-meta.xml
<CustomField>
    <fullName>from__c</fullName>
    <label>from</label>
    <length>255</length>
    <type>Text</type>
</CustomField>