force-app/main/default/objects/OrderPdfSetting__mdt/fields/Items__c.field-meta.xml
<CustomField>
    <fullName>Items__c</fullName>
    <label>Items</label>
    <length>255</length>
    <type>Text</type>
</CustomField>