force-app/main/default/objects/OrderPdfSetting__mdt/fields/OrderHeaderTitle__c.field-meta.xml
<CustomField>
    <fullName>OrderHeaderTitle__c</fullName>
    <label>Order Header Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>