force-app/main/default/objects/OrderPdfSetting__mdt/fields/OrderNo__c.field-meta.xml
<CustomField>
    <fullName>OrderNo__c</fullName>
    <label>Order No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>