force-app/main/default/objects/OrderPdfSetting__mdt/fields/PricePerPiece__c.field-meta.xml
<CustomField>
    <fullName>PricePerPiece__c</fullName>
    <label>Price per Piece</label>
    <length>255</length>
    <type>Text</type>
</CustomField>