force-app/main/default/objects/OrderPdfSetting__mdt/fields/Quantity__c.field-meta.xml
<CustomField>
    <fullName>Quantity__c</fullName>
    <label>Quantity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>