force-app/main/default/objects/OrderPdfSetting__mdt/fields/SettledDiscount__c.field-meta.xml
<CustomField>
    <fullName>SettledDiscount__c</fullName>
    <label>Settled discount</label>
    <length>255</length>
    <type>Text</type>
</CustomField>