force-app/main/default/objects/OrderPdfSetting__mdt/fields/ShippingAddress__c.field-meta.xml
<CustomField>
    <fullName>ShippingAddress__c</fullName>
    <label>Shipping address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>