force-app/main/default/objects/OrderPdfSetting__mdt/fields/ShippingCost__c.field-meta.xml
<CustomField>
    <fullName>ShippingCost__c</fullName>
    <label>Shipping cost</label>
    <length>255</length>
    <type>Text</type>
</CustomField>