force-app/main/default/objects/OrderPdfSetting__mdt/fields/ValidUntill__c.field-meta.xml
<CustomField>
    <fullName>ValidUntill__c</fullName>
    <label>Valid Untill</label>
    <length>255</length>
    <type>Text</type>
</CustomField>