force-app/main/default/objects/OrderPdfSetting__mdt/fields/VAT__c.field-meta.xml
<CustomField>
    <fullName>VAT__c</fullName>
    <label>VAT</label>
    <length>255</length>
    <type>Text</type>
</CustomField>