force-app/main/default/objects/OrderPdfSetting__mdt/fields/VATStatement__c.field-meta.xml
<CustomField>
    <fullName>VATStatement__c</fullName>
    <label>VAT Statement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>